<resources>
    <string name="app_name">KredivoApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_title_pulsa">Pulsa</string>
    <string name="label_title_data_package">Data Package</string>
    <string name="label_nominal">Nominal :</string>
    <string name="label_price">Rp %1$s</string>
    <string name="label_order_code">KB-%1$s</string>
    <string name="label_valid_date">Valid Date</string>
    <string name="label_voucher_code">Voucher Code</string>
    <string name="label_tc">Terms &amp; Conditions</string>
    <string name="action_copy">Copy</string>

    <string name="alert_title">Error</string>
    <string name="alert_close">Tutup</string>
    <string name="alert_yes">Ya</string>
    <string name="alert_no">Tidak</string>
    <string name="title_promo">Merchant Promo</string>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="label_hint_phone_number">081234567890</string>
    <string name="action_ok">Ok</string>
    <string name="label_promos">Promos</string>

    <string name="label_notification_otp">OTP is not needed for first transaction of the day that is less than Rp 200,000</string>
    <string name="label_loan_agreement">By continuing, I agree with loan agreement of Kredivo</string>
    <string name="label_support">Invoice has been emailed to you\nHave problem? Email us at support@kredivo.com</string>
    <string name="label_pay">pay</string>
    <string name="label_ok">ok</string>
    <string name="label_payment_detail">Payment Details</string>
    <string name="label_admin_fee">Admin fee</string>
    <string name="label_kredivo_pin">Kredivo PIN</string>
    <string name="label_pin">PIN</string>
    <string name="label_order_detail">Order Details</string>
    <string name="label_status">Status</string>
    <string name="label_order_id">Order ID</string>


</resources>
