<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_confirmation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.don.kredivoapp.ui.confirmation.ConfirmationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_8dp"
        android:layout_marginBottom="@dimen/margin_size_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_top_item"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_size_100dp"
                android:background="@color/colorWhite"
                android:elevation="@dimen/margin_size_20dp"
                android:gravity="center_vertical|start"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_size_16dp"
                android:paddingTop="@dimen/margin_size_16dp"
                android:paddingEnd="@dimen/margin_size_16dp"
                android:paddingBottom="@dimen/margin_size_16dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_pulsa"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="@dimen/margin_size_8dp"
                    android:background="@drawable/rectangle_border_white"
                    android:visibility="visible"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:id="@+id/tv_mobile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_size_16dp"
                    android:fontFamily="@font/ave_medium"
                    android:text="@string/label_mobile_number"
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@+id/iv"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size_16dp"
                android:layout_marginTop="@dimen/margin_size_16dp"
                android:layout_marginEnd="@dimen/margin_size_16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/margin_size_20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorLightYellow"
                    android:gravity="start"
                    android:padding="@dimen/margin_size_20dp"
                    android:text="@string/label_notification_otp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size_16dp"
                android:layout_marginTop="@dimen/margin_size_16dp"
                android:layout_marginEnd="@dimen/margin_size_16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/margin_size_20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorDarkGrey"
                        android:fontFamily="@font/ave_medium"
                        android:gravity="start"
                        android:padding="@dimen/margin_size_20dp"
                        android:text="@string/label_payment_detail"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <include layout="@layout/view_line_default" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_size_16dp"
                        android:layout_marginTop="@dimen/margin_size_8dp"
                        android:layout_marginEnd="@dimen/margin_size_16dp"
                        android:layout_marginBottom="@dimen/margin_size_8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_pulsa_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/ave_medium"
                            android:gravity="start"
                            tools:text="Paket Data Indosat 3G"/>

                        <TextView
                            android:id="@+id/tv_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/ave_medium"
                            android:gravity="end"
                            tools:text="Rp 210.000" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_size_16dp"
                        android:layout_marginTop="@dimen/margin_size_8dp"
                        android:layout_marginEnd="@dimen/margin_size_16dp"
                        android:layout_marginBottom="@dimen/margin_size_8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/ave_medium"
                            android:gravity="start"
                            android:text="@string/label_admin_fee" />

                        <TextView
                            android:id="@+id/tv_admin_fee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/ave_medium"
                            android:gravity="end"
                            tools:text="Rp 0" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_size_16dp"
                        android:layout_marginBottom="@dimen/margin_size_16dp"
                        android:background="@drawable/line_dash" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_size_16dp"
                        android:layout_marginTop="@dimen/margin_size_8dp"
                        android:layout_marginEnd="@dimen/margin_size_16dp"
                        android:layout_marginBottom="@dimen/margin_size_16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_method"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/ave_medium"
                            android:gravity="start"
                            tools:text="Pay in 30 days"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_total_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/ave_medium"
                            android:gravity="end"
                            tools:text="Rp 500.000"
                            android:textColor="@color/colorOrange"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold" />


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size_16dp"
                android:layout_marginTop="@dimen/margin_size_16dp"
                android:layout_marginEnd="@dimen/margin_size_16dp"
                android:layout_marginBottom="72dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/margin_size_20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorDarkGrey"
                        android:fontFamily="@font/ave_medium"
                        android:gravity="start"
                        android:padding="@dimen/margin_size_20dp"
                        android:text="@string/label_kredivo_pin"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <include layout="@layout/view_line_default" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_size_16dp"
                        android:layout_marginTop="@dimen/margin_size_16dp"
                        android:fontFamily="@font/ave_medium"
                        android:gravity="start"
                        android:text="@string/label_pin" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_size_16dp"
                        android:layout_marginTop="@dimen/margin_size_8dp"
                        android:layout_marginEnd="@dimen/margin_size_16dp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/et_pin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberPassword"
                            android:maxLength="6"
                            tools:ignore="Autofill,LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/tv_loan_agreement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_size_16dp"
                        android:layout_marginTop="@dimen/margin_size_16dp"
                        android:layout_marginEnd="@dimen/margin_size_16dp"
                        android:layout_marginBottom="@dimen/margin_size_16dp"
                        android:gravity="start"
                        android:textSize="@dimen/text_size_12"
                        android:text="@string/label_loan_agreement"
                        android:textColor="@android:color/darker_gray" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/btn_pay"
        style="@style/Button.Orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_pay"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
